--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="row no-gutters">
         <div class="col-md-4">
           <img
-            src="https://media-exp1.licdn.com/dms/image/C5603AQFP37tli6BiwQ/profile-displayphoto-shrink_400_400/0?e=1601510400&v=beta&t=8hJ1IW5RqSET5e6drna43gNOtmEu4bE51xpIlbxcbRA"
+            src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/42416631_10215424752945651_5660916820551401472_o.jpg?_nc_cat=109&ccb=2&_nc_sid=174925&_nc_ohc=ra_mDRD5KuMAX86FZCO&_nc_oc=AQkNKV_Wl7UyfYFHIlfTb2v3D6rg2L3F5heYQ-2IxTXcO9ylsnMiQo07ecynDca2BI4&_nc_ht=scontent-sjc3-1.xx&oh=f2782fea7bb0dc939694a55e8ee3f08d&oe=6003D41C"
             class="card-img" alt="Photo of Isaac">
         </div>
         <div class="col-md-8 col-sm-8">
